--- a/index.html
+++ b/index.html
@@ -132,6 +132,122 @@
         </ul>
         <p class="text--small">*O preço pode variar caso a assinatura seja feita através de outras plataformas.</p>
     </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Imagem com TV, Celular, Tablet e Celular">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos.
+                Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível
+                assistir em até 4 telas ao mesmo tempo.</p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até
+                mesmo sem internet.</p>
+        </div>
+    </section>
+
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrome OS</li>
+                    <li>MacOS</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="TV">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Videogames">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Celular">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Android</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section class="faq">
+        <h2 class="title">Perguntas Frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Pergunta
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Resposta
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que é o Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Resposta
+                </div>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="">
+                        <select>
+                            <option selected>English</option>
+                            <option>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item"><a href="#" class="text--small">Termos e condições de uso</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Contrato de subscrição</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Política de Privacidade</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Aviso de Privacidade da EU e UK</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Política de Cookies</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Anúncios baseados em interesses</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Formas de ver</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Centro de ajuda</a></li>
+                <li class="footer__links__item"><a href="#" class="text--small">Gerir preferências de privacidade</a>
+                </li>
+            </ul>
+            <p class="text--small">© 2023 Disney e suas entidades relacionadas. Todos os direitos reservados.</p>
+        </div>
+
+    </footer>
+
 
     <script src="./src/main.js"></script>
 </body>
