--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__container">
+            <h1 class="">
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item"><a class="button button--secondary" href="#">Assine agora</a>
+                </li>
+                <li class="header__links__item"><a class="button button--dark" href="#">Entrar</a></li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
-            <h1 class="hero__content__branding">
+            <div class="hero__content__branding">
                 <img src="./dist/images/disneyplus.svg" alt="Disney+">
-            </h1>
+            </div>
             <h3 class="title--small">As melhores histórias em um só lugar</h3>
             <p>
                 <a href="#" class="link-text">Assinar o Disney+</a>
@@ -37,10 +49,10 @@
     </section>
     <section class="shows">
         <nav class="shows__tabs">
-            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">Em
-                breve</button>
-            <button data-tab-button="populares" class="shows__tabs__button">Mais populares</button>
-            <button data-tab-button="star_plus" class="shows__tabs__button">Mais no Star+</button>
+            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">EM
+                BREVE</button>
+            <button data-tab-button="populares" class="shows__tabs__button">MAIS POPULARES</button>
+            <button data-tab-button="star_plus" class="shows__tabs__button">MAIS NO STAR+</button>
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
@@ -142,7 +154,10 @@
         </div>
     </section>
     <section class="image-text-section image-text-section--image-full-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png">
+            <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        </picture>
         <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
             <h2 class="title">Baixe filmes e séries</h2>
             <p class="text--big">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até
@@ -199,22 +214,64 @@
     </section>
 
     <section class="faq">
-        <h2 class="title">Perguntas Frequentes</h2>
+        <h2 class="title">Perguntar frequentes</h2>
         <ul class="faq__questions">
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Pergunta
+                    O que está incluído no Disney+ ?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta
+                    O Disney+ oferece:<br><br>
+                    • Experiência de entretenimento exclusiva.<br>
+                    • As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só
+                    lugar.<br>
+                    • Downloads ilimitados em até 10 dispositivos compatíveis.<br>
+                    • Mais de 300 títulos em 4K UHD e HDR.<br>
+                    • A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo
+                    adicional.<br>
+                    • IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.
                 </div>
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    O que é o Disney+?
+                    Já tem o Disney+ ou o Star+ e quer o Combo+ ?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta
+                    Ao assinar o Combo+:<br><br>
+                    • O valor da sua assinatura existente será descontado do preço do Combo+.<br>
+                    • Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do
+                    Combo+.<br>
+                    • Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar
+                    para o Combo+ no momento. Entre em contato com o suporte do Disney+ para conhecer suas opções.<br>
+                    • Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.<br>
+                    • Lembre-se: você pode cancelar a assinatura quando quiser.<br>
+                    • No momento, apenas a assinatura mensal do Combo+ está disponível.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Quais formas de pagamento posso utilizar?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Você pode utilizar:<br><br>
+                    • Cartão de débito e crédito<br>
+                    • PayPal<br>
+                    • Mercado Pago<br>
+                    • Empresas parceiras como Google Play Store e App Store da Apple<br>
+                    • Mercado Livre<br>
+                    • Provedores locais de TV, telefonia e internet.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Como posso ver conteúdo com classificação indicativa até 16 e 18?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18,
+                    todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental
+                    do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os
+                    usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a
+                    classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
                 </div>
             </li>
         </ul>
